Set zero address to authorizer in UnionBridgeMainNetConstants and update related tests